--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rollup -c"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "repository": {
     "type": "git",
@@ -23,9 +37,12 @@
   },
   "homepage": "https://github.com/fongelias/lingua#readme",
   "devDependencies": {
+    "@types/jest": "^23.3.1",
+    "jest": "^23.5.0",
     "mocha": "^5.2.0",
     "rollup": "^0.65.0",
     "rollup-plugin-typescript2": "^0.16.1",
+    "ts-jest": "^23.1.4",
     "typescript": "^3.0.1"
   }
 }
