--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "jest",
     "build": "rollup -c",
-    "doc": "typedoc --json .typedoc.json"
+    "doc": "typedoc --options .typedoc.json",
+    "doc:clean": "rm -r doc"
   },
   "jest": {
     "transform": {
